# yast-instserver

./: .cvsignore  .gitignore  .travis.yml  MAINTAINER  README.md  RPMNAME  Rakefile  yast2-instserver.spec.in
agents/: Makefile  Makefile.am  ag_content  contentfile.scr
doc/: Makefile.am  SPEC
doc/autodocs/: .gitignore  Makefile  Makefile.am
doc/xml/: InstalltionServer.xml
httpd/: Makefile.am
package/: yast2-instserver.changes  yast2-instserver.spec
src/: Instserver.pm  Instserver.ycp  Makefile.am  complex.ycp  dialogs.ycp  helps.ycp  instserver.desktop  instserver.ycp  instserver_auto.ycp  instserver_proposal.ycp  instserver_setup.ycp  routines.ycp  wizards.ycp
src/clients/: instserver.rb  instserver.ycp
src/desktop/: instserver.desktop  org.opensuse.yast.InstServer.desktop
src/httpd/: Makefile.am  inst_server  inst_server.conf  inst_server.conf.in  sysconfig.apache-inst_server
src/include/instserver/: complex.rb  complex.ycp  dialogs.rb  helps.rb  routines.rb  wizards.rb
src/modules/: Instserver.rb  Instserver.ycp
src/servers_non_y2/: ag_content
test/: Instserver_test.rb  Makefile.am  routines_test.rb
test/fixtures/: SLES12_content
testsuite/: .gitignore  Makefile
testsuite/tests/: Instserver.out  Instserver.rb  Instserver.ycp
